11Dec99=======================================================================
1. added missing pc48 so that it calls the DXDb::process routine 
10Dec99=======================================================================
1. allow msgs to marked as read or unread
02Dec99=======================================================================
1. DX command doesn't recognise '6M' as '6m' in SH/DX ON 6M.
2. set/node now sets the homenode as the callsign.
3. changed the label for the 18Mhz band from '18m' to '17m' in the bands 
table. 
01Dec99=======================================================================
1. started the callbot which lives at n2tly.dxcluster.net 9000.
2. added www.qrz.com
3. added www.buck.com
4. added k4ute at no4j.com
28Nov99=======================================================================
1. fixed all the stupid errors introduced in 1.36 confusing DXUser->get with
DXCluster->get_exact.
24Nov99=======================================================================
1. extended badmsg.pl stuff so that it works like the forward file and allows
one to reject on to, from, origin and subject fields.
2. added a swop.pl again in a forward.pl like format that allows simple swop
for a field or test on a field and set another.
3. Fixed the problem that read private mail follows you around as well as
unread private mail does.
4. Change the logic of connections so that the node will accept callsigns with
SSIDs to -8 as different entities from each other. SSIDs > 8 are subtracted 
from 15 and are assumed to be coming in via netrom diddled connections. This
affects lots of the commands as well. I may not have got them all.
5. Hangup clients on HUP signals. I originally ignored them, for reasons that
are now lost in the mists of time. HUP signals now cause clients to die 
(cleanly) and disconnect everything correctly.
6. Added show/time command
21Nov99=======================================================================